created xml file for signup page and login page ~ido

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,27 @@
 <resources>
+
+    <!-- App Settings -->
     <string name="app_name">DesmosCloneJavaFirst</string>
-    <string name="login">Login Page</string>   <!-- Page title -->
-    <string name="email" />
-    <string name="password" />
+
+
+    <!-- SignUp Page -->
+    <string name="SignUp">SignUp Page</string>   <!-- SignUp Page title -->
+
+    <string name="firstNameSignUp"></string>
+    <string name="lastNameSignUp"></string>
+    <string name="usernameSignUp"></string>
+    <string name="emailSignUp"></string>
+
+    <string name="passwordSignUpFirst"></string>
+    <string name="passwordSignUpSecond"></string>
+
+
+
+
+    <!--Login Page -->
+    <string name="login">Login Page</string>   <!-- Login Page title -->
+    <string name="usernameLogin"></string>
+    <string name="passwordLogin"></string>
+
+
 </resources>
