started adding stuff for the graphing calculator ~ido

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,7 +9,8 @@
 
 
     <!--Login Page -->
-    <string name="login">Login Page</string>   <!-- Login Page title -->
+    <string name="login">Login Page</string>
+    <string name="function">enter your function here</string>   <!-- Login Page title -->
 
 
 </resources>
