worked on both desgin and login backend, created a really cool animated background that WORKS HOLY SHIT IM SO HYPED and yeah very cool ~ido

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -60,7 +60,9 @@
     <string name="email">Email</string>
     <string name="username">Username</string>
     <string name="lastname">LastName</string>
-    <string name="firstname">FirstName</string>   <!-- Login Page title -->
+    <string name="firstname">FirstName</string>
+    <string name="forgot_password">forgot password?</string>
+    <string name="register_a_new_user">Register a new user</string>
 
 
 </resources>
