--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -81,6 +81,7 @@
     <string name="tts">TTS</string>
     <string name="stop_tts_button">stop tts</string>
     <string name="select_time">Select\nTime</string>
+    <string name="profile_picture">Profile Picture</string>
 
 
 </resources>
