--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -82,6 +82,7 @@
     <string name="stop_tts_button">stop tts</string>
     <string name="select_time">Select\nTime</string>
     <string name="profile_picture">Profile Picture</string>
+    <string name="sign_out">sign out</string>
 
 
 </resources>
